<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.dracosoft</groupId>
    <artifactId>simula</artifactId>
    <version>0.2.0-SNAPSHOT</version>
    <name>Simula</name>

    <properties>
        <maven.compiler.release>17</maven.compiler.release>
    </properties>


    <modules>
        <module>simbioma</module>
        <module>simvm</module>
        <module>weightedrulespl</module>
        <module>ConditionParser</module>
        <module>MicroFunctLang</module>
        <module>parserutils</module>
    </modules>

    <packaging>pom</packaging>
    <url>http://maven.apache.org</url>

    <build>
        <plugins>
            <!-- Plugin di compilazione -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                </configuration>
            </plugin>

            <!-- Plugin Surefire (test runner) -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
            </plugin>
        </plugins>
    </build>


    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.9.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.9.3</version>
            <scope>test</scope>
        </dependency>

    </dependencies>


</project>
